<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.thinkermobile.sinyi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/form_bg_color" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp" >

                <TextView
                    android:id="@+id/introTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.2"
                    android:textColor="@color/form_text_color"
                    android:textSize="16sp" />
            </RelativeLayout>

            <com.yowoo.newbuyhouse.view.SingleChooseRow
                android:id="@+id/nameRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                custom:showDetailText="false"
                custom:showMoreImage="false"
                custom:titleText="@string/name" >

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="20dp"
                    android:cursorVisible="true"
                    android:gravity="right"
                    android:hint="必填"
                    android:text=""
                    android:textColor="@color/form_text_color"
                    android:textColorHint="@color/form_text_hint_color"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp" />
            </com.yowoo.newbuyhouse.view.SingleChooseRow>

            <com.yowoo.newbuyhouse.view.SingleChooseRow
                android:id="@+id/genderRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                custom:showDetailText="false"
                custom:showMoreImage="false"
                custom:titleText="@string/gender" >

                <RadioGroup
                    android:id="@+id/genderGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="22dp"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/maleRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:button="@null"
                        android:checked="true"
                        android:drawableLeft="@drawable/radio_selector"
                        android:drawablePadding="5dp"
                        android:text="@string/gender_male"
                        android:textColor="@color/form_text_color"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/femaleRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableLeft="@drawable/radio_selector"
                        android:drawablePadding="5dp"
                        android:text="@string/gender_female"
                        android:textColor="@color/form_text_color"
                        android:textSize="16sp" />
                </RadioGroup>
            </com.yowoo.newbuyhouse.view.SingleChooseRow>

            <com.yowoo.newbuyhouse.view.SingleChooseRow
                android:id="@+id/phoneRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                custom:showDetailText="false"
                custom:showMoreImage="false"
                custom:titleText="@string/phone" >

                <EditText
                    android:id="@+id/phoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="20dp"
                    android:cursorVisible="true"
                    android:gravity="right"
                    android:hint="必填"
                    android:text=""
                    android:textColor="@color/form_text_color"
                    android:textColorHint="@color/form_text_hint_color"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp" />
            </com.yowoo.newbuyhouse.view.SingleChooseRow>

            <com.yowoo.newbuyhouse.view.SingleChooseRow
                android:id="@+id/emailRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                custom:showDetailText="false"
                custom:showMoreImage="false"
                custom:titleText="@string/email" >

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="20dp"
                    android:cursorVisible="true"
                    android:gravity="right"
                    android:hint=""
                    android:text=""
                    android:textColor="@color/form_text_color"
                    android:textColorHint="@color/form_text_hint_color"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp" />
            </com.yowoo.newbuyhouse.view.SingleChooseRow>

            <com.yowoo.newbuyhouse.view.SingleChooseRow
                android:id="@+id/dateRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                custom:showDetailText="false"
                custom:showMoreImage="false"
                custom:titleText="@string/contact_date" >

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:text="2015-10-10"
                    android:textColor="@color/form_text_color"
                    android:textSize="16sp" />
            </com.yowoo.newbuyhouse.view.SingleChooseRow>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp" >

                <LinearLayout
                    android:id="@+id/lawContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/checkImageView"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/tick_off" />

                    <TextView
                        android:id="@+id/lawTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/form_text_color" />
                </LinearLayout>

                <TextView
                    android:id="@+id/explaneTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lawContainer"
                    android:layout_marginTop="15dp"
                    android:text="@string/from_law_explane"
                    android:textColor="@color/form_explane_text_color"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/sendButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/explaneTextView"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/btn_green_selector"
                    android:text="@string/send_reservation" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>