<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res/com.thinkermobile.sinyi"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="@color/white_color" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <!-- Dummy item to prevent EditText from receiving focus -->
            <LinearLayout
                android:id="@+id/ll_dummy"
                android:layout_width="0px"
                android:layout_height="0px"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical" >
                <requestFocus />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone" >

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/checking"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp" >

                
                <com.yowoo.newbuyhouse.view.FieldRow
                    android:id="@+id/accountFieldRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:titleTextColor="@color/login_title_color"
                    custom:titleText="@string/member_account" >

                    <EditText
                        android:id="@+id/accountEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="50dp"
                        android:textColorHint="@color/form_text_hint_color"
                        android:inputType="text"
                        android:paddingLeft="8dp"
                        android:textColor="@color/login_title_color"
                        android:textSize="18sp"
                        android:cursorVisible="true"
                    		android:textCursorDrawable="@null" />
                </com.yowoo.newbuyhouse.view.FieldRow>
                
				<com.yowoo.newbuyhouse.view.FieldRow
                    android:id="@+id/passwordFieldRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:titleTextColor="@color/login_title_color"
                    custom:titleText="@string/member_password" >

                    <EditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="50dp"
                        android:layout_toLeftOf="@+id/viewButton"
                        android:gravity="center_vertical"
                        android:textColorHint="@color/form_text_hint_color"
                        android:inputType="textPassword"
                        android:paddingLeft="8dp"
                        android:textColor="@color/login_title_color"
                        android:textSize="18sp"
                        android:cursorVisible="true"
                    		android:textCursorDrawable="@null" />
                    
                    <Button
                        android:id="@+id/viewButton"
                        android:layout_width="20dp"
                        android:layout_height="12dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/ic_password_view" />

                </com.yowoo.newbuyhouse.view.FieldRow>                

                

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/btn_green_selector"
                    android:text="@string/login"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/registerButton"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_green_line_selector"
                        android:textColor="@color/login_green_color"
                        android:text="@string/register" />

                    <TextView
                        android:id="@+id/blank"
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:text="" />

                    <Button
                        android:id="@+id/forgetPwButton"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_green_line_selector"
                        android:textColor="@color/login_green_color"
                        android:text="@string/forget_password" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp" >
                    
                    <TextView
                        android:id="@+id/line"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="#dfdfdf"
                        android:text="--------------- or ---------------" />
                    
                </RelativeLayout>
                
                <!-- <com.facebook.login.widget.LoginButton
                    android:id="@+id/fbButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" /> -->
				
				<Button
                    android:id="@+id/fbButton"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/btn_fb_selector"
                    android:textColor="@color/white_color"
                    android:text="Facebook" />
                
                <Button
                    android:id="@+id/yahooButton"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/btn_yahoo_selector"
                    android:textColor="@color/white_color"
                    android:text="Yahoo" />
                
                <Button
                    android:id="@+id/googleButton"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/btn_google_selector"
                    android:textColor="@color/white_color"
                    android:text="Google" />

                <TextView
                    android:id="@+id/contactServiceTextView"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:textColor="@color/login_title_color"
                    android:textSize="14sp"
                    android:text="@string/cannot_login_contact_service" />

                
                
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>