<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res/com.thinkermobile.sinyi"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="@color/white_color" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <!-- Dummy item to prevent EditText from receiving focus -->

            <LinearLayout
                android:id="@+id/ll_dummy"
                android:layout_width="0px"
                android:layout_height="0px"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical" >

                <requestFocus />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="20dp" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="0dp" >

                    <TextView
                        android:id="@+id/introTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingMultiplier="1.2"
                        android:text="已將驗證碼發送至"
                        android:textColor="@color/form_text_color"
                        android:textSize="16sp" />
                </RelativeLayout>

                <com.yowoo.newbuyhouse.view.FieldRow
                    android:id="@+id/backPhoneFieldRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:titleText="@string/verify_code" >

                    <EditText
                        android:id="@+id/codeEditText"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:cursorVisible="true"
                        android:gravity="left"
                        android:textColor="@color/form_text_color"
                        android:textCursorDrawable="@null" >
                    </EditText>
                </com.yowoo.newbuyhouse.view.FieldRow>

                <Button
                    android:id="@+id/sendButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_green_selector"
                    android:text="@string/send"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/resendButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_green_line_selector"
                    android:text="@string/resend_verify_code"
                    android:textColor="@color/login_green_color"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>